--- a/templates/partials/topbar.html
+++ b/templates/partials/topbar.html
@@ -1,5 +1,6 @@
 
 {% if user.is_authenticated %}
+<a href="{% url 'user_control_panel'%}">UCP</a>
 {% if request.user.is_staff %}
 <a href="/admin" target="_blank">ACP</a>
 {% endif %}
