--- a/templates/partials/messages.html
+++ b/templates/partials/messages.html
@@ -1,3 +1,7 @@
-{% for message in messages %}
-    {{ message }}
-{% endfor %}
+<div class="row">
+    <div class="col-12">
+        {% for message in messages %}
+            {{ message }}
+        {% endfor %}
+    </div>
+</div>
