--- a/templates/partials/topbar.html
+++ b/templates/partials/topbar.html
@@ -1,11 +1,29 @@
-
-{% if user.is_authenticated %}
-<a href="{% url 'user_control_panel'%}">UCP</a>
-{% if request.user.is_staff %}
-<a href="/admin" target="_blank">ACP</a>
-{% endif %}
-<a href="{% url 'logout' %}">Logout</a>
-{% else %}
-<a href="{% url 'login' %}">Login</a>
-<a href="{% url 'django_registration_register' %}">Register</a>
-{% endif %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12 text-center">
+            <ul class="nav justify-content-center">
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'user_control_panel'%}">UCP</a>
+                  </li>
+                {% if request.user.is_staff %}
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin" target="_blank">ACP</a>
+                </li>
+                {% endif %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Login</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'django_registration_register' %}">Register</a>
+                </li>
+                {% endif %}
+                
+            </ul>
+        </div>
+    </div>
+</div>
