--- a/templates/partials/topbar.html
+++ b/templates/partials/topbar.html
@@ -22,8 +22,8 @@
                     <a class="nav-link" href="{% url 'django_registration_register' %}">Register</a>
                 </li>
                 {% endif %}
-                
             </ul>
+            Main Char: {% if selected_main_character %}{{ selected_main_character.name }}{% else %}None Selected{% endif %}
         </div>
     </div>
 </div>
