added random dice rolls for stat creation & racial bonuses

--- a/characters/templates/characters.html
+++ b/characters/templates/characters.html
@@ -4,13 +4,11 @@
 {% block page_heading%}Your Characters{% endblock %}
 
 {% block content %}
-<p><a class="btn btn-success" href="#">Create Character</a> {% for character in characters %}<a class="btn btn-info" href="{% url 'set_main_character'%}">Set Main Character</a>{% empty %}{% endfor %}</p>
+<p><a class="btn btn-success" href="{% url 'create_new_character' %}">Create Character</a> <a class="btn btn-info" href="{% url 'set_main_character'%}">Set Main Character</a></p>
 <div class="table-responsive">
-  {% for character in characters %}
   <table class="table table-bordered">
       <thead class="thead-light">
         <tr>
-          <th>Appearance</th>
           <th>Name</th>
           <th>Class</th>
           <th>Race</th>
@@ -18,16 +16,13 @@
           <th>Gold</th>
           <th>Level</th>
           <th>Experiance</th>
-          <th>Str/Dex/Con/Wis/Cha</th>
+          <th>Str/Dex/Con/Int/Wis/Cha</th>
           <th>Delete</th>
         </tr>
       </thead>
       <tbody>
-      {% empty %}    
-      {% endfor %}
       {% for character in characters %}
       <tr class="{% if character.main_character == 'Yes' %}table-warning{%endif%}">
-          <td>{{ character.appearance }}</td>
           <td>{{ character.name }}</td>
           <td>{{ character.role }}</td>
           <td>{{ character.race }}</td>
@@ -35,7 +30,7 @@
           <td>{{ character.gold }}</td>
           <td>{{ character.level }}</td>
           <td>{{ character.xp }}</td>
-          <td>{{ character.strength}}/{{ character.dexterity}}/{{character.constitution}}/{{character.wisdom}}/{{character.charisma}}</td>
+          <td>{{ character.strength}}/{{ character.dexterity}}/{{character.constitution}}/{{character.intelligence}}/{{character.wisdom}}/{{character.charisma}}</td>
           <td><a class="btn btn-danger btn-sm" href="{% url 'delete_character' character.id %}">Delete Character</a></td>
       </tr>
       {% empty %}
