changed wording for main character

--- a/templates/partials/topbar.html
+++ b/templates/partials/topbar.html
@@ -43,7 +43,7 @@
                 {% endif %}
             </ul>
             {% if user.is_authenticated %}
-                    Main Char: 
+                    Character Selected: 
                     {% if selected_main_character %}
                         {{ selected_main_character.name }}
                     {% else %}
