added more links and changed header links

--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
-{% block page_title %}Store{% endblock %}
-{% block page_heading%}Store{% endblock %}
+{% block page_title %}Money Store{% endblock %}
+{% block page_heading%}Money Store{% endblock %}
 
 {% block content %}
 <div class="row">
