--- a/templates/partials/topbar.html
+++ b/templates/partials/topbar.html
@@ -18,7 +18,7 @@
                 </li>
                 {% endif %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Money Store</a>
+                    <a class="nav-link" href="{% url 'products' %}">Money Store</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Community</a>
@@ -27,6 +27,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Main Website</a>
                     <div class="dropdown-menu">
+                      <a class="dropdown-item" href="#">Home</a>
                       <a class="dropdown-item" href="#">About</a>
                       <a class="dropdown-item" href="#">Screenshots</a>
                       <a class="dropdown-item" href="#">Contact</a>
