updated navigation to include new game common app

--- a/templates/partials/navigation.html
+++ b/templates/partials/navigation.html
@@ -3,7 +3,7 @@
     <div class="col-12">
         <ul class="nav nav-justified">
             <li class="nav-item">
-              <a class="nav-link" href="#">Dashboard</a>
+              <a class="nav-link" href="{% url 'game_dashboard' %}">Dashboard</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Inventory</a>
@@ -35,7 +35,7 @@
     <div class="col-12">
         <ul class="nav justify-content-center">
             <li class="nav-item">
-              <a class="nav-link" href="#">Home</a>
+              <a class="nav-link" href="{% url 'home' %}">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
