--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -2,7 +2,7 @@
     <div class="col-12">
         <hr>
         {% if user.is_authenticated %}
-        <a href="#">Header</a>
+        <a href="{% url 'game_dashboard'%}">Header</a>
         {% else %}
         <a href="{% url 'home' %}">Header</a>
         {% endif %}
