--- a/templates/partials/topbar.html
+++ b/templates/partials/topbar.html
@@ -27,7 +27,7 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Main Website</a>
                     <div class="dropdown-menu">
-                      <a class="dropdown-item" href="#">Home</a>
+                      <a class="dropdown-item" href="{% url 'home' %}">Home</a>
                       <a class="dropdown-item" href="#">About</a>
                       <a class="dropdown-item" href="#">Screenshots</a>
                       <a class="dropdown-item" href="#">Contact</a>
