--- a/templates/partials/topbar.html
+++ b/templates/partials/topbar.html
@@ -17,8 +17,12 @@
                     <a class="nav-link" href="{% url 'django_registration_register' %}">Register</a>
                 </li>
                 {% endif %}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'products' %}">Money Store</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Money Store</a>
+                    <div class="dropdown-menu">
+                      <a class="dropdown-item" href="{% url 'products' %}">Products</a>
+                      <a class="dropdown-item" href="{% url 'view_cart' %}">Cart</a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Community</a>
