--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
     {% block head_js %}{% endblock %}
-    <title>Robert Davies - {% block page_title %}{% endblock %}</title>
+    <title>WebRPG - {% block page_title %}{% endblock %}</title>
 </head>
 <body>
 {% include 'partials/topbar.html' %}
