added number validation to manual stat fields

--- a/characters/templates/create_new_character.html
+++ b/characters/templates/create_new_character.html
@@ -22,37 +22,37 @@
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="id_strength" class="control-label required-field ">Strength</label>
-                    <input type="text" name="strength" value="0" maxlength="254" class=" form-control" required="" id="id_strength">
+                    <input type="number" name="strength" value="0" maxlength="254" class=" form-control" required="" id="id_strength" min="0" max="20">
                 </div>
             </div>
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="id_dexterity" class="control-label required-field ">Dexterity</label>
-                    <input type="text" name="dexterity" value="0" maxlength="254" class=" form-control" required="" id="id_dexterity">
+                    <input type="number" name="dexterity" value="0" maxlength="254" class=" form-control" required="" id="id_dexterity" min="0" max="20">
                 </div>
             </div>
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="id_constitution" class="control-label required-field ">Constitution</label>
-                    <input type="text" name="constitution" value="0" maxlength="254" class=" form-control" required="" id="id_constitution">
+                    <input type="number" name="constitution" value="0" maxlength="254" class=" form-control" required="" id="id_constitution" min="0" max="20">
                 </div>
             </div>
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="id_intelligence" class="control-label required-field ">Intelligence</label>
-                    <input type="text" name="intelligence" value="0" maxlength="254" class=" form-control" required="" id="id_intelligence">
+                    <input type="number" name="intelligence" value="0" maxlength="254" class=" form-control" required="" id="id_intelligence" min="0" max="20">
                 </div>
             </div>
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="id_wisdom" class="control-label required-field ">Wisdom</label>
-                    <input type="text" name="wisdom" value="0" maxlength="254" class=" form-control" required="" id="id_wisdom">
+                    <input type="number" name="wisdom" value="0" maxlength="254" class=" form-control" required="" id="id_wisdom" min="0" max="20">
                 </div>
             </div>
             <div class="col-md-2">
                 <div class="form-group">
                     <label for="id_charisma" class="control-label required-field ">Charisma</label>
-                    <input type="text" name="charisma" value="0" maxlength="254" class=" form-control" required="" id="id_charisma">
+                    <input type="number" name="charisma" value="0" maxlength="254" class=" form-control" required="" id="id_charisma" min="0" max="20">
                 </div>
             </div>
         </div>
